Camino only - Bug 355808: Popup suppressed silently. r/sr=pink